# base16384-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: check.yml
benches/: benchmark.rs
src/: error.rs  lib.rs  utf8.rs  utils.rs
tests/: magic.rs  zeros.rs
