[package]
name = "base16384"
version = "0.1.0"
edition = "2021"
authors = ["忘忧北萱草 <wybxc@qq.com>"]
description = "Encode binary file to printable utf16be, and vice versa."
license = "GPL-3.0"
repository = "https://github.com/Wybxc/base16384-rs"
rust-version = "1.60"
readme = "README.md"
exclude = ["Cargo.lock", "flake.nix", "flake.lock", ".github/"]

[dependencies]

[features]
default = ["std"]
alloc = []
std = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
